# Qalb-Urdu

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: BRANCH_PROTECTION.md  CODEOWNERS  README.md  settings.yml
.github/workflows/: repository-protection.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  GLOSSARY.md  OVERVIEW.md  PROGRESS.md  RESEARCH.md  RESULTS_ANALYSIS_ROUND_1.md  ROADMAP.md  ROUND_2_ANALYSIS.md  ROUND_3_ANALYSIS.md  ROUND_4_ANALYSIS.md  TEST_REVIEW_ANALYSIS.md  TRAINING.md  USAGE.md
examples/: ollama_example.py  transformers_example.py
reports/archive/: FINAL_EVALUATION_REPORT.md  FINAL_EVALUATION_REPORT_20260204_081315.md  FINAL_EVALUATION_REPORT_20260204_081330.md
scripts/: analyze_low_performers.py  analyze_round2.py  analyze_round4.py  data_collector.py  generate_academic_pdf.py  generate_final_report.py  generate_pdf_report.py  report_generator.py  test_runner.py
tests/: test_cases.py
tests/baseline/: roman_urdu_tests.json  roman_urdu_tests_round2.json  roman_urdu_tests_round4.json  urdu_script_tests.json  urdu_script_tests_round2.json  urdu_script_tests_round4.json
